--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.17.7",
     "@tanstack/react-query-devtools": "^5.17.7",
+    "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^10.18.0",
     "lucide-react": "^0.306.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
