--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -26,12 +26,14 @@
     "next-cloudinary": "^5.18.0",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-cookie": "^7.0.1",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-icons": "^4.12.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.17.7",
